// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a TextField with the rest of the props 1`] = `
<Field
  error="This field is required"
  errorIcon={
    <IconError
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help="This will not be shared with outside sources"
  hideRequired={false}
  htmlFor="email"
  isInline={true}
  isInvalid={false}
  label="Email Address"
  labelAttrs={
    Object {
      "className": "healtheintent-legend",
    }
  }
  required={true}
  showOptional={false}
>
  <Input
    className="healtheintent-application"
    id="email"
    maxLength={75}
    minLength={8}
    name="email"
    required={true}
    type="email"
  />
</Field>
`;

exports[`should render a default TextField component 1`] = `
<Field
  error={null}
  errorIcon={
    <IconError
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help={null}
  hideRequired={false}
  isInline={false}
  isInvalid={false}
  label={null}
  labelAttrs={Object {}}
  required={false}
  showOptional={false}
>
  <Input
    maxLength={null}
    minLength={null}
    name={null}
    required={false}
    type="text"
  />
</Field>
`;

exports[`should render as controlled when just a default value is passed into the TextField 1`] = `
<TextField
  error={null}
  help={null}
  inputAttrs={Object {}}
  isInline={false}
  label={null}
  labelAttrs={Object {}}
  maxLength={null}
  minLength={null}
  name={null}
  onChange={[Function]}
  required={false}
  type="text"
  value="foo"
>
  <Field
    error={null}
    errorIcon={
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    help={null}
    hideRequired={false}
    isInline={false}
    isInvalid={false}
    label={null}
    labelAttrs={Object {}}
    required={false}
    showOptional={false}
  >
    <div
      className="field"
    >
      <Input
        maxLength={null}
        minLength={null}
        name={null}
        onChange={[Function]}
        required={false}
        type="text"
        value="foo"
      >
        <input
          className="input"
          maxLength={null}
          minLength={null}
          name={null}
          onChange={[Function]}
          required={false}
          type="text"
          value="foo"
        />
      </Input>
    </div>
  </Field>
</TextField>
`;

exports[`should render as uncontrolled when just a default value is passed into the TextField 1`] = `
<TextField
  defaultValue="foo"
  error={null}
  help={null}
  inputAttrs={Object {}}
  isInline={false}
  label={null}
  labelAttrs={Object {}}
  maxLength={null}
  minLength={null}
  name={null}
  required={false}
  type="text"
>
  <Field
    error={null}
    errorIcon={
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    help={null}
    hideRequired={false}
    isInline={false}
    isInvalid={false}
    label={null}
    labelAttrs={Object {}}
    required={false}
    showOptional={false}
  >
    <div
      className="field"
    >
      <Input
        defaultValue="foo"
        maxLength={null}
        minLength={null}
        name={null}
        required={false}
        type="text"
      >
        <input
          className="input"
          defaultValue="foo"
          maxLength={null}
          minLength={null}
          name={null}
          required={false}
          type="text"
        />
      </Input>
    </div>
  </Field>
</TextField>
`;
